--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Login System",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node app.js",
+    "dev" : "nodemon app.js"
   },
   "author": "Rakib Uddin",
   "license": "MIT",
